Bug 1607142 - Hold lock in CacheFile::IsWriteInProgress to avoid data race r=mayhemer

This method is called on cache I/O thread while the members are modified usually on the main thread which results in data race.

Differential Revision: https://phabricator.services.mozilla.com/D60367

--HG--
extra : moz-landing-system : lando