netwerk/cache2/CacheFile.h
@@ -116,6 +116,7 @@ class CacheFile final : public CacheFileChunkListener,
   void Key(nsACString& aKey) { aKey = mKey; }
   bool IsDoomed();
   bool IsPinned() const { return mPinned; }
+  // Returns true when there is a potentially unfinished write operation.
   bool IsWriteInProgress();
   bool EntryWouldExceedLimit(int64_t aOffset, int64_t aSize, bool aIsAltData);
 
